# github-backup-app

./: .dockerignore  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE.txt  README.md  README.rst  activate_dev.sh  dev-setup.sh  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  release.yml
github_backup/: __main__.py  create_github_app.py  github_backup.py
